# Real-Time-Noise-Reduction-App

./: .gitignore  CMakeLists.txt
Model/: AudioGenerator.py  DatasetGenerator.py  Metrics.py  Model.py  ModelDatasetGenerator.py  RealTimeTest.py  main.py
src/: AudioStream.cpp  AudioStream.h  AudioStreamException.h  SpectralGating.cpp  SpectralGating.h  Timer.cpp  main.cpp
src/AudioFile/: AudioFile.cpp  AudioFile.h
src/Filters/: AdaptiveKalman.h  IIR.cpp  IIR.h  Kalman.h  NoiseGate.cpp  NoiseGate.h
src/GUI/: MainWidget.cpp  MainWidget.h
src/GUI/AudioChart/: AudioChart.cpp  AudioChart.h
src/GUI/DropDownList/: DropDownList.cpp  DropDownList.h
src/GUI/GateSlider/: GateSlider.cpp  GateSlider.h
src/GUI/Icon/: Icon.cpp  Icon.h
src/GUI/Logo/: Logo.cpp  Logo.h
src/GUI/ModelTester/: ModelTester.cpp  ModelTester.h
src/GUI/TextLabel/: TextLabel.cpp  TextLabel.h
src/GUI/ToggleButton/: ToggleButton.cpp  ToggleButton.h
src/Stream/: AudioStream.cpp  AudioStream.h  AudioStreamException.cpp  AudioStreamException.h
src/Util/: Timer.h
